# SEAM-AVDA

./: README.md  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: seam_spec.md
examples/: demo_interpreter.py  simple_query.seam
examples/benchmarks/: benchmark_speedup.py
src/compiler/: __init__.py  seam_to_avda.py
src/libantipodal/: CMakeLists.txt  parity_index.cpp  parity_index.h  quotient_space.cpp  quotient_space.h
src/libantipodal/backends/: faiss_backend.cpp  faiss_backend.h
src/seam/: __init__.py  interpreter.py  optimizer.py  parser.py  types.py
tests/: test_interpreter.py  test_optimizer.py  test_parser.py
